# prawn

./: .gitattributes  .gitignore  Cargo.toml  Modelfile  README.md  pin0cchi0-cli.py  pin0cchi0.py  prawn-cli.py  prawn.py  requirements.txt
config/: autonomous_config.json  default.yaml
core/: __init__.py  base_module.py  bytecode_analyzer.py  code_auditor.py  config_manager.py  echidna_harness.py  economic_analyzer.py  engine.py  finder.py  git_diff.py  judge.py  memory.py  module_manager.py  ollama_client.py  payloads.py  researcher.py  schemas.py  senator.py  smart_contract_auditor.py  solidity_parser.py  tool_checker.py  utils.py  wake_test_runner.py  zero_day_researcher.py
docs/: autonomous_scanning.md  cli_guide.md  training.md  web_ui_guide.md
modules/: __init__.py
modules/autonomous/: autonomous_scanner.py
modules/exploitation/: __init__.py  xss_exploit.py
modules/recon/: __init__.py  api_discovery.py  dir_enum.py  dns_enum.py  network_mapper.py  osint.py  port_scanner.py  ssl_scanner.py  subdomain_enum.py  tech_fingerprint.py  web_crawler.py
scripts/: dependency_check.sh  setup.sh
src/: lib.rs
tests/: dummy_vulnerable_server.py  smoke_test.py  test_access_control_scanner.py  test_autonomous_scanner.py  test_csrf_scanner.py  test_idor_scanner.py  test_insecure_design_scanner.py  test_integration.py  test_judge_agent.py  test_lfi_scanner.py  test_logic_flaw_scanner.py  test_path_traversal.py  test_researcher_agent.py  test_sql_injection.py  test_ssrf_scanner.py  test_xss_scanner.py  test_xxe_scanner.py
web_ui/: __init__.py  app.py
(+47 files in other folders)
