[package]
name = "prawn-core"
version = "0.1.0"
edition = "2021"
description = "High-performance native security core for PRAWN 🦐"

[lib]
name = "prawn_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libafl = "0.13.2"
libafl_bolts = "0.13.2"
hashbrown = "0.14"
hex = "0.4"